cloud build config

--- a/client/cloudbuild.yaml
+++ b/client/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', '${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE}', '.']
+  args: ['build', '-t', '${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE}', '-f', 'client/Dockerfile', '.']
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['app', 'deploy']
 images:
