--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-COPY package.json package.json
+COPY client/package.json package.json
 COPY package-lock.json package-lock.json
 
 RUN npm install --production
