cloud build config

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,12 +2,12 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-COPY client/package.json package.json
-COPY client/package-lock.json package-lock.json
+COPY package.json package.json
+COPY package-lock.json package-lock.json
 
-RUN npm install --production
+RUN npm install --omit=dev
 
-COPY client/. .
+COPY . .
 
 RUN npm run build
 
