--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,17 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "engines": {
+    "node": "20.6.1"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
+    "create-env": "printenv > .env",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/index.ts",
+    "start": "node ./dist/index.js",
     "start:prod": "npm run build && node ./dist/src/index.js",
+    "gcp-build": "",
     "build": "npx tsc",
     "start:nodemon": "./node_modules/nodemon/bin/nodemon.js"
   },
