--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "engines": {
-    "node": "20.6.1"
+    "node": "20.x"
   },
   "description": "",
   "main": "index.js",
