--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "create-env": "printenv > .env",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/index.js",
+    "start": "node ./dist/src/index.js",
     "start:prod": "npm run build && node ./dist/src/index.js",
     "gcp-build": "",
     "build": "npx tsc",
