--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,6 +11,18 @@ RUN npm run build
 
 FROM node:20-slim
 
+ARG DB_HOST
+ARG DB_PORT
+ARG POSTGRES_PASSWORD
+ARG POSTGRES_USER
+ARG POSTGRES_DB
+
+ENV DB_HOST=${DB_HOST}
+ENV DB_PORT=${DB_PORT}
+ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+ENV POSTGRES_USER=${POSTGRES_USER}
+ENV POSTGRES_DB=${POSTGRES_DB}
+
 WORKDIR /usr/src/app
 
 COPY package*.json ./
