--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,3 +1,6 @@
 dispatch:
-    - url: '*/api/*'
-      service: server
+  - url: '*/api/*'
+    service: server
+
+  - url: '*/*'
+    service: default
